# repo39

./: .mcp.json  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  benchmark.sh  build.sh
.claude-plugin/: README.md  plugin.json
repo39-cli/: Cargo.toml
repo39-cli/src/: changes.rs  config.rs  git.rs  glob.rs  identify.rs  main.rs  map.rs  review.rs  walk.rs
repo39-cli/tests/: walk_test.rs
repo39-mcp/: Cargo.toml
repo39-mcp/src/: changes.rs  config.rs  deps.rs  identify.rs  main.rs  map.rs  review.rs  search.rs
repo39-mcp/src/mcp/: params.rs  server.rs
src/: config.rs  deps.rs  identify.rs  lib.rs  main.rs  map.rs  outline.rs  read.rs  util.rs  walk.rs
src/mcp/: mod.rs  server.rs
tests/: walk_test.rs
