[workspace]
members = ["repo39-cli", "repo39-mcp"]
default-members = ["repo39-cli"]
resolver = "3"

[workspace.package]
version = "1.0.0"
edition = "2024"
authors = ["Alejandro Quintanar"]
license = "Apache-2.0"
repository = "https://github.com/alejandroqh/repo39"
homepage = "https://github.com/alejandroqh/repo39"
keywords = ["ai", "agent", "mcp", "token", "repo"]
categories = ["command-line-utilities", "development-tools"]

[profile.release]
strip = true
lto = true
codegen-units = 1
