[package]
name = "repo39"
version = "1.0.1"
edition = "2024"
description = "Token-optimized repo explorer for AI agents"
authors = ["Alejandro Quintanar"]
license = "Apache-2.0"
repository = "https://github.com/alejandroqh/repo39"
homepage = "https://github.com/alejandroqh/repo39"
readme = "README.md"
keywords = ["ai", "agent", "mcp", "token", "repo"]
categories = ["command-line-utilities", "development-tools"]
exclude = [
    "dist/",
    "target/",
    ".claude/",
    ".claude-plugin/",
    "openclaw-plugin/",
    "CLAUDE.md",
    ".mcp.json",
    ".DS_Store",
    "build.sh",
    "benchmark.sh",
    "bench/",
]

[[bin]]
name = "repo39"
path = "src/main.rs"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
clap = { version = "4", features = ["derive"] }
regex = "1"
rmcp = { version = "1", features = ["server", "transport-io", "macros"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "io-std"] }
serde = { version = "1", features = ["derive"] }
schemars = "1"
anyhow = "1"

[dev-dependencies]
tempfile = "3"
