[package]
name = "repo39-cli"
version.workspace = true
edition.workspace = true
description = "Token-optimized repo explorer for AI agents"
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../README.md"
exclude = ["../benchmark.sh", "../build.sh", "../.claude-plugin/"]

[[bin]]
name = "repo39-cli"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
regex = "1"

[dev-dependencies]
tempfile = "3"
