[package]
name = "repo39-mcp"
version.workspace = true
edition.workspace = true
description = "MCP server exposing repo39 tools for AI agents"
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../README.md"
exclude = ["../benchmark.sh", "../build.sh", "../.claude-plugin/"]

[[bin]]
name = "repo39-mcp"
path = "src/main.rs"

[dependencies]
regex = "1"
rmcp = { version = "1.3", features = ["server", "transport-io", "macros"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "io-std"] }
serde = { version = "1", features = ["derive"] }
schemars = "1"
anyhow = "1"
